--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,15 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+
 MEMCACHED_HOST=memcached
+
+QUEUE_CONNECTION=database
 
 RAPID_API_KEY=54bd52641fmsh2ce7aada839ece0p1eeeaejsna24e9cae7fb1
